# QRCodeGeneratorApi

./: .env.example  .gitignore  .railwayignore  API_DOCS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  ROADMAP.md  nixpacks.toml  railway.json  railway.toml
.github/workflows/: ci.yml
src/: main.rs  state.rs
src/config/: mod.rs
src/errors/: mod.rs
src/handlers/: health.rs  mod.rs  qr.rs
src/handlers/v2/: mod.rs  qr.rs
src/middleware/: mod.rs
src/models/: colors.rs  mod.rs  requests.rs
src/models/v2/: enums.rs  mod.rs  requests.rs
src/services/: mod.rs  qr_service.rs  qr_service_v2.rs
