[package]
name = "qr-api"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
